<?xml version="1.0"?>
<package format="3">
  <name>dmx_ros</name>
  <version>0.1.0</version>
  <description>The dmx_ros-driver package</description>

  <maintainer email="ferry.schoenmakers@nobleo.nl">Ferry Schoenmakers</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
